syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.ibm.storageagent";
option java_outer_classname = "StorageAgentProto";
option objc_class_prefix = "HLW";

package storageagent;

// The storage agent service definition.
service StorageAgent {
  // Define a host on storage side.
  rpc CreateHost (CreateHostRequest) returns (CreateHostReply) {}
  rpc DeleteHost (DeleteHostRequest) returns (DeleteHostReply) {}
  rpc ListHosts (ListHostsRequest) returns (ListHostsReply) {}
  rpc ListIscsiTargets (ListIscsiTargetsRequest) returns (ListIscsiTargetsReply) {}
}

// Information about a specific host.
message Host {
  string identifier = 1;
  string name = 2;
  string type = 3;
  string status = 4;
  string array = 5;
  repeated string iqns = 6;
  repeated string wwpns = 7;
}

// Information about a specific iscsi target, including ip and iqn,
// but only ip is mandatory since iqn can be discovered by iscsiadm.
message IscsiTarget {
  string address = 1;
  string iqn = 2;
}

// type is optional
message CreateHostRequest {
  string name = 1;
  string type = 2;
  repeated string iqns = 3;
  repeated string wwpns = 4;
  map<string, string> secrets = 5;
}

message CreateHostReply {
  Host host = 1;
}

// Either name or identifier is required
message DeleteHostRequest {
  oneof unique_key {
    string identifier = 1;
    string name = 2;
  }
  map<string, string> secrets = 3;
}

message DeleteHostReply {
  // Intentionally empty.
}

message ListHostsRequest {
  // Either name or identifier should be specified.
  // The identifier and name are OPTIONAL, if not specified, return all.
  oneof unique_key {
    string identifier = 1;
    string name = 2;
  }
  map<string, string> secrets = 3;
}

message ListHostsReply {
  repeated Host hosts = 1;
}

message ListIscsiTargetsRequest {
  map<string, string> secrets = 1;
}

message ListIscsiTargetsReply {
  repeated IscsiTarget targets = 1;
}
